[package]
name = "tensor-macros"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A procedural macro for creating Solana Pubkey constants from base58 strings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/solana-pubkey-macro"
readme = "README.md"
keywords = ["solana", "pubkey", "macro", "base58"]
categories = [
    "development-tools::procedural-macro-helpers",
    "cryptography::cryptocurrencies",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
bs58 = "0.4.0"

[dev-dependencies]
trybuild = "1.0"
solana-program = "^1.14, <1.19"
