[package]
name = "tensor-toolbox"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
license = "Apache-2.0"

[features]
cnft = ["dep:mpl-bubblegum"]
mpl-core = ["dep:mpl-core"]
token-2022 = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["default"] }
bytemuck = "1.14"
mpl-bubblegum = { version = "1.2.0", optional = true }
mpl-core = { version = "0.4.0", optional = true }
mpl-token-metadata = "4.0.0"
solana-program = "^1.14, <1.18"
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.0"
tensor-vipers = { path = '../vipers', version = "1.0.0" }
