[package]
name = "tensor-toolbox"
description = "Toolbox of useful Rust utilities for Tensor Foundation's Solana programs"
repository = "https://github.com/tensor-foundation/toolbox"
homepage = "https://github.com/tensor-foundation/toolbox"
version = "0.5.0"
edition = "2021"
readme = "../README.md"
license = "Apache-2.0"

[features]
cnft = ["dep:mpl-bubblegum"]
mpl-core = ["dep:mpl-core"]
token-2022 = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["default"] }
bytemuck = "1.14"
mpl-bubblegum = { version = "1.4.0", optional = true }
mpl-core = { version = "0.7.2", optional = true }
mpl-token-metadata = "4.0.0"
solana-program = "^1.14, <1.19"
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.0"
tensor-vipers = { path = '../vipers', version = "1.0.1" }
