[package]
name = "tensor-vipers"
version = "1.0.1"
description = "Assorted checks and validations for writing safer Solana programs. Updated from the original Vipers crate to use Anchor 0.29.0."
repository = "https://github.com/tensor-foundation/toolbox"
homepage = "https://github.com/tensor-foundation/toolbox"
license = "Apache-2.0"
edition = "2021"
readme = "../README.md"
keywords = ["solana", "anchor"]

[features]
default = []
ata = ["spl-associated-token-account"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
num-traits = "^0.2.14"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = [
    "no-entrypoint",
], optional = true }

[dev-dependencies]
spl-token = { version = "^3", features = ["no-entrypoint"] }
static-pubkey = "^1.0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
