[package]
name = "cnft"
version = "0.1.2"
edition = "2018"

[dependencies]
anchor-lang = "=0.26.0"
anchor-spl = { version = "=0.26.0", features =  ["default"] }
mpl-bubblegum = {version="0.7.0", features=["cpi"]}
mpl-token-metadata = { version="=1.8.3", features = [ "no-entrypoint" ] }
spl-account-compression = { version="0.1.10", features = ["cpi"] }
spl-noop = { version="0.1.3", features=["no-entrypoint"] }
vipers = {path= '../vipers' }
